# image_processing_2023

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  NoiseRemoval.cpp  main.py
.github/workflows/: ci.yml  gtest.yaml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/ImageProc/: Image.h
libs/: CImg.h
src/: CMakeLists.txt  argparser.py  cli.hpp  config.hpp  files.hpp  filters.py  fourier_transform.py  image.py  main.cpp  numpy_filters.py  opt_dft.py  test.py  visualize.py
src/CLI/: InputParser.cpp  InputParser.hpp
src/ImageProc/: ElementaryOperations.cpp  ElementaryOperations.h  Exceptions.cpp  Exceptions.h  ExtractionDetails.cpp  ExtractionDetails.h  GeometricOperations.cpp  GeometricOperations.h  Helpers.cpp  Helpers.h  Histogram.cpp  Histogram.h  Image.cpp  ImgAnalysis.cpp  ImgAnalysis.h  ImgCharacteristics.cpp  ImgCharacteristics.h  MorphologicalOperations.cpp  MorphologicalOperations.h  NoiseRemoval.cpp  NoiseRemoval.h  NonLinearFilter.cpp  NonLinearFilter.h  Types.cpp  Types.h
src/ImageProc/kernels/: kernels.cpp  kernels.h
tests/: CMakeLists.txt  analysis_operation_test.cpp  elementary_operations_test.cpp  geometric_operations_test.cpp  helpers.cpp  helpers.hpp  histogram_test.cpp  img_characteristics_test.cpp  noise_removal_test.cpp
